style.css
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
    background-color: #f0f0f0;
    font-family: 'Arial', sans-serif;
    color: #333333;}

h1 {
    text-transform: uppercase;
    color: #333333;
    font-size: 2em;
    margin: 0;
    padding: 0;
    padding-top: 10px;
    text-align: center;
    letter-spacing: 4px;
}

header p {
    font-size: 1.2em;
    color: #666666;
    text-align: center;
    margin-top: 10px;
}

nav ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: center;
    gap: 25px;
}

nav ul li a {
    text-decoration: none;
    color: #007BFF;
    font-family: 'Arial', sans-serif;
    font-size: 1em;
}

header, main, nav, footer {
    padding: 0 10px;
}

nav {
    background-color: #f8f8f8;
    padding: 1px 0;
    position: sticky;
    top: 0;
}

main p {
    line-height: 1.6rem;
    margin: 0;
    margin-bottom: 15px;
    text-align: left;
    text-indent: 30px;
}

section {
    max-width: 800px;
    scroll-margin-top: 65px;
}

h2 {
    font-family: 'Arial', sans-serif;
    color: #333333;
    text-align: center;
    padding: 0;
    margin: 20px 0 15px 0;
}

nav ul li a.active {
  color: rgb(197, 9, 9);
}

main li {
    line-height: 1.5rem;
}

#contact {
    background-color: #ffffff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin-bottom: 10px;
}

#contact h2 {
    margin-top: 0;
}

#contact p {
    margin: 0 0 15px 0;
    text-indent: 0;
}

form label {
    font-weight: bold;
}

form input, form textarea, button {
    width: 100%;
    padding: 8px;
    margin: 5px 0 15px 0;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

form button {
    background-color: #007BFF;
    color: white;
    border: none;
    cursor: pointer;
    font-size: inherit;
}

footer {
    text-align: center;
    padding: 1px 0;
    background-color: #f8f8f8;
    color: #666666;
}

.icon-list {
  list-style: none; /* Removes default bullets */
  padding: 0;        /* Removes default padding */
  margin: 0;         /* Removes default margin */
}

.icon-list li {
  position: relative;
  padding-left: 30px; /* Space for the icon */
  margin: 0 0 10px 0; /* Adjusts spacing between items */
}

.icon-list li::before {
  content: "★"; /* Use a Unicode character or emoji */
  position: absolute;
  left: 0;
  top: 50%;
  transform: translateY(-50%); /* Vertically centers the icon */
  color: #ff5733;              /* Icon color */
  font-size: 1.2em;            /* Icon size */
}

.icon-list #email::before  {
    content: "✉️"; /* Email icon */
}

.icon-list #linkedin::before {
    content: "💼"; /* LinkedIn icon */
}

.icon-list #github::before {
    content: "💻"; /* GitHub icon */
}

.icon-list #phone::before {
    content: "📞"; /* Phone icon */
}

